tests/ui/image/query/query_size_lod_err.stderr
error[E0277]: the trait bound `Image<f32, 4, 2, 0, 0, 1, 0, 4, 3>: HasQuerySizeLod` is not satisfied
    --> $DIR/query_size_lod_err.rs:12:21
     |
12   |     *output = image.query_size_lod(0);
     |                     ^^^^^^^^^^^^^^ the trait `HasQuerySizeLod` is not implemented for `Image<f32, 4, 2, 0, 0, 1, 0, 4, 3>`
     |
     = help: the following other types implement trait `HasQuerySizeLod`:
               Image<SampledType, 0, DEPTH, ARRAYED, 0, SAMPLED, FORMAT, COMPONENTS, ACCESS_QUALIFIER>
               Image<SampledType, 1, DEPTH, ARRAYED, 0, SAMPLED, FORMAT, COMPONENTS, ACCESS_QUALIFIER>
               Image<SampledType, 2, DEPTH, ARRAYED, 0, SAMPLED, FORMAT, COMPONENTS, ACCESS_QUALIFIER>
               Image<SampledType, 3, DEPTH, ARRAYED, 0, SAMPLED, FORMAT, COMPONENTS, ACCESS_QUALIFIER>
note: required by a bound in `Image::<SampledType, DIM, DEPTH, ARRAYED, spirv_std::::image::{impl#7}::{constant#0}, SAMPLED, FORMAT, COMPONENTS, ACCESS_QUALIFIER>::query_size_lod`
    --> $SPIRV_STD_SRC/image.rs:1009:15
     |
1004 |     pub fn query_size_lod<Size: ImageCoordinate<u32, DIM, ARRAYED> + Default>(
     |            -------------- required by a bound in this associated function
...
1009 |         Self: HasQuerySizeLod,
     |               ^^^^^^^^^^^^^^^ required by this bound in `Image::<SampledType, DIM, DEPTH, ARRAYED, spirv_std::::image::{impl#7}::{constant#0}, SAMPLED, FORMAT, COMPONENTS, ACCESS_QUALIFIER>::query_size_lod`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
